--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
+    "devstart": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -19,6 +20,11 @@
   "homepage": "https://moon-program.herokuapp.com/",
   "dependencies": {
     "chalk": "^4.1.2",
+    "ejs": "^3.1.6",
+    "ejs-locals": "^1.0.2",
     "express": "^4.17.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.13"
   }
 }
