--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://moon-program.herokuapp.com/",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "chalk": "^4.1.2",
     "dotenv": "^10.0.0",
     "ejs": "^3.1.6",
