--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "ejs": "^3.1.6",
     "ejs-locals": "^1.0.2",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "pg": "^8.7.1",
     "validator": "^13.6.0"
   },
