--- a/package.json
+++ b/package.json
@@ -20,11 +20,14 @@
   "homepage": "https://moon-program.herokuapp.com/",
   "dependencies": {
     "bcrypt": "^5.0.1",
-    "chalk": "^4.1.2",
+    "cookie-parser": "^1.4.5",
+    "csurf": "^1.11.0",
     "dotenv": "^10.0.0",
     "ejs": "^3.1.6",
     "ejs-locals": "^1.0.2",
     "express": "^4.17.1",
+    "express-rate-limit": "^5.4.0",
+    "helmet": "^4.6.0",
     "jsonwebtoken": "^8.5.1",
     "pg": "^8.7.1",
     "validator": "^13.6.0"
