--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "dotenv": "^10.0.0",
     "ejs": "^3.1.6",
     "ejs-locals": "^1.0.2",
+    "ethers": "^5.5.1",
     "express": "^4.17.1",
     "express-rate-limit": "^5.4.0",
     "helmet": "^4.6.0",
